--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
+    "@aws-sdk/s3-request-presigner": "^3.864.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mammoth": "^1.10.0",
+    "pdf-parse": "^1.1.1",
+    "string-strip-html": "^13.4.13",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
